plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

allprojects {
    group = 'com.eventflowx'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {

    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = '21'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.5"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
            mavenBom "org.testcontainers:testcontainers-bom:1.19.8"
        }
    }

    base {
        archivesName = "eventflowx-${project.name}"
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testImplementation 'org.mockito:mockito-core:5.11.0'
    }

    test {
        useJUnitPlatform()
    }
}
